# gitdash

./: LICENSE  README.md  pyproject.toml
contrib/: gitdash-tray.desktop
gitdash/: _terminal.py  app.py  config.py  status.py  tray.py
